manifests/apps-overlays/production/bu-project-apiproxy.yaml
---
# Source: apps-overlays/templates/apiproxy/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    oncallPager: 800-555-1212
  labels:
    app.kubernetes.io/managed-by: Manual
    app: apiproxy
  namespace: bu-project-prod
  name: bu-project-apiproxy-svc
spec:
  selector:
    app: apiproxy
  clusterIP: None
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
---
# Source: apps-overlays/templates/apiproxy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    oncallPager: 800-555-1212
  labels:
    app.kubernetes.io/managed-by: Manual
    app: apiproxy
  namespace: bu-project-prod
  name: bu-project-apiproxy-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apiproxy
  template:
    metadata:
      annotations:
        oncallPager: 800-555-1212
      labels:
        app: apiproxy
    spec:
      terminationGracePeriodSeconds: 120
      imagePullSecrets:
        - name: bu-project-dockerregistry-secret
      volumes:
        - name: apiproxy-configmap-volume
          configMap:
            name: bu-project-apiproxy-configmap
      containers:
        - name: apiproxy
          image: registry.example.com/project/apiproxy:1.0
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
              protocol: TCP
          resources:
            requests:
              cpu: 500m
              memory: 1Gi
            limits:
              cpu: 500m
              memory: 1Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 60"]
          volumeMounts:
            - name: apiproxy-configmap-volume
              mountPath: /etc/nginx/conf.d
---
# Source: apps-overlays/templates/apiproxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    oncallPager: 800-555-1212
  labels:
    app.kubernetes.io/managed-by: Manual
    app: apiproxy
  namespace: bu-project-prod
  name: bu-project-apiproxy-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: web.example.com
      http:
        paths:
          - path: /api/v1/
            pathType: Prefix
            backend:
              service:
                name: bu-project-apiproxy-svc
                port:
                  number: 80
