manifests/apps-overlays/production/bu-project-webfront.yaml
---
# Source: apps-overlays/templates/webfront/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    oncallPager: 800-555-1212
  labels:
    app.kubernetes.io/managed-by: Manual
    app: webfront
    app.kubernetes.io/component: server
  namespace: bu-project-prod
  name: bu-project-webfront-svc
spec:
  selector:
    app: webfront
  clusterIP: None
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
---
# Source: apps-overlays/templates/webfront/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    oncallPager: 800-555-1212
  labels:
    app.kubernetes.io/managed-by: Manual
    app: webfront
    app.kubernetes.io/component: server
  namespace: bu-project-prod
  name: bu-project-webfront-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: apiproxy
  template:
    metadata:
      annotations:
        oncallPager: 800-555-1212
      labels:
        app: webfront
        app.kubernetes.io/component: server
    spec:
      terminationGracePeriodSeconds: 120
      imagePullSecrets:
        - name: bu-project-dockerregistry-secret
      containers:
        - name: webfront
          image: registry.example.com/project/webfront:release-2024.09.05.2230
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            requests:
              cpu: 1000m
              memory: 2Gi
            limits:
              cpu: 1000m
              memory: 2Gi
          lifecycle:
            preStop:
              exec:
                command: ["/bin/sh", "-c", "sleep 60"]
---
# Source: apps-overlays/templates/webfront/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    oncallPager: 800-555-1212
  labels:
    app.kubernetes.io/managed-by: Manual
    app: webfront
    app.kubernetes.io/component: server
  namespace: bu-project-prod
  name: bu-project-webfront-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: web.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bu-project-webfront-svc
                port:
                  number: 8080
